# drake

drake/common/trajectories/: piecewise_polynomial_trajectory.h
drake/examples/kuka_iiwa_arm/: iiwa_controller.cc  iiwa_lcm.h  kuka_simulation.cc  robot_plan_interpolator.cc
drake/examples/kuka_iiwa_arm/dev/: BUILD  CMakeLists.txt  kuka_simulation.cc
drake/examples/kuka_iiwa_arm/dev/contact_state_estimator/: BUILD  box_pose_visualization_demo.cc  contact_visualization_demo.cc  geometric_contact_state_estimator.cc  geometric_contact_state_estimator.h  iiwa_and_object_state_aggregator.cc  iiwa_and_object_state_aggregator.h  optitrack_pose_extractor.cc  optitrack_pose_extractor.h  optitrack_pose_identification_demo.cc  robot_visualization_demo.cc
drake/examples/kuka_iiwa_arm/dev/monolithic_pick_and_place/: BUILD  CMakeLists.txt  README.md  demo_diagram_builder.cc  demo_diagram_builder.h  iiwa_state_feedback_plan.h  monolithic_pick_and_place_demo.cc  monolithic_pick_and_place_with_gelsight_demo.cc  monolitic_pick_and_place_with_gelsight_demo.cc  state_machine_system.cc  state_machine_system.h  synchronous_world_state.cc  synchronous_world_state.h  trajectory_generator_test.cc
drake/examples/kuka_iiwa_arm/dev/monolithic_pick_and_place/action_primitives/: BUILD  CMakeLists.txt  action_primitives_base.h  gripper_action.cc  gripper_action.h  iiwa_move.cc  iiwa_move.h
drake/examples/kuka_iiwa_arm/dev/nuevo_pick_and_place/: BUILD.bazel  monolithic_pick_and_place_demo.cc  pick_and_place_state_machine.cc  pick_and_place_state_machine.h  pick_and_place_states.cc  pick_and_place_states.h  pick_and_place_utils.cc  pick_and_place_utils.h
drake/examples/kuka_iiwa_arm/dev/pick_and_place/: BUILD  pick_and_place_state_machine.cc  world_state.cc  world_state.h
drake/examples/kuka_iiwa_arm/dev/test/: ik_range_test.cc  optitrack_box_test.cc  optitrack_pick_and_place_setup_test.cc
drake/examples/kuka_iiwa_arm/dev/tools/: BUILD  floating_object_tree_visualizer_demo.cc  geometric_contact_state_estimator.cc  geometric_contact_state_estimator.h  moving_average_filter.cc  moving_average_filter.h  optitrack_handler.cc  optitrack_handler.h  optitrack_pose_translator.cc  optitrack_pose_translator.h
drake/examples/kuka_iiwa_arm/dev/whole_body_contact/: BUILD  demo_diagram_builder.cc  demo_diagram_builder.h  demo_tree_visual_test.cc  iiwa_diagram_factory.cc  iiwa_diagram_factory.h  iiwa_wsg_diagram_factory.h  scripted_state_machine_system.cc  scripted_state_machine_system.h  whole_body_common.h  whole_body_contact_manipulation_demo.cc
drake/examples/kuka_iiwa_arm/iiwa_world/: iiwa_wsg_diagram_factory.h
drake/examples/kuka_iiwa_arm/models/objects/: block_for_pick_and_place.urdf  block_for_pick_and_place_extra_large.urdf
drake/examples/kuka_iiwa_arm/pick_and_place/: pick_and_place_state_machine.cc
drake/examples/kuka_iiwa_arm/test/: BUILD  optitrack_test.cc
drake/lcmtypes/: BUILD
drake/manipulation/models/: BUILD
drake/manipulation/models/gelsight_description/: BUILD
drake/manipulation/models/gelsight_description/urdf/: simple_gelsight.urdf
drake/manipulation/models/iiwa_description/urdf/: dual_iiwa14_partial_mesh_collision.urdf
drake/manipulation/models/wsg_50_description/sdf/: schunk_wsg_50_ball_contact.sdf
drake/manipulation/perception/: BUILD  optitrack_pose_extractor.cc  pose_smoother.cc  pose_smoother.h
drake/manipulation/perception/test/: pose_smoother_test.cc
drake/manipulation/planner/: BUILD.bazel  constraint_relaxing_ik.cc  constraint_relaxing_ik.h  robot_plan_interpreter.h  trajectory_interpolator.cc  trajectory_interpolator.h
drake/manipulation/schunk_wsg/: BUILD.bazel  schunk_wsg_command_interpreter.cc  schunk_wsg_command_interpreter.h  schunk_wsg_status_interpreter.cc  schunk_wsg_status_interpreter.h
drake/manipulation/state_machine/: BUILD.bazel  manipulation_state.h  state_machine.cc  state_machine.h  state_machine_system.cc  state_machine_system.h  state_machine_utils.h
drake/manipulation/util/: moving_average_filter.h
drake/manipulation/util/test/: moving_average_filter_test.cc
drake/systems/lcm/: lcm_subscriber_system.h
drake/systems/sensors/: rgbd_camera.cc
examples/kuka_iiwa_arm/models/objects/: open_top_box.urdf
manipulation/scene_generation/: BUILD.bazel  random_clutter_demo.cc  random_clutter_generator.cc  random_clutter_generator.h  simulate_plant_to_rest.cc  simulate_plant_to_rest.h
manipulation/scene_generation/test/: random_clutter_test.cc  random_clutter_to_rest_test.cc  test_random_clutter_to_rest.cc
manipulation/util/: world_sim_tree_builder.cc  world_sim_tree_builder.h
multibody/rigid_body_plant/: rigid_body_plant.h
tools/: install_data.bzl
