load("//tools:drake.bzl", "drake_cc_library", "drake_cc_binary", "drake_cc_googletest")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "random_clutter_generator",
    srcs = ["random_clutter_generator.cc"],
    hdrs = ["random_clutter_generator.h"],
    deps = [
        "//common",
        "//lcm",
        "//manipulation/util:simple_tree_visualizer",
        "//manipulation/util:world_sim_tree_builder",
        "//multibody:inverse_kinematics",
        "//multibody:rigid_body_constraint",
        "//multibody/rigid_body_plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
    ],
 )

drake_cc_binary(
    name = "random_clutter_demo",
    srcs = ["random_clutter_demo.cc"],
    data = [
        "//examples/kuka_iiwa_arm:prod_models",
    ],
    deps = [
        ":random_clutter_generator",
        "//common",
        "//common:text_logging_gflags",
        "@gflags",
    ],
)

add_lint_tests()

# === test/ ===

drake_cc_googletest(
    name = "random_clutter_test",
    data = [
        "//examples/kuka_iiwa_arm:prod_models",
    ],
    deps = [
        ":random_clutter_generator",
        "//common",
        "//common/test_utilities:eigen_matrix_compare",
        "//common:text_logging_gflags",
        "@gflags",
    ],
)
