load("//tools:drake.bzl", "drake_cc_library", "drake_cc_binary", "drake_cc_googletest")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "random_clutter_generator",
    srcs = ["random_clutter_generator.cc"],
    hdrs = ["random_clutter_generator.h"],
    deps = [
        "//common",
        "//multibody:inverse_kinematics",
        "//multibody:rigid_body_constraint",
        ],
 )

drake_cc_library(
    name = "simulate_plant_to_rest",
    srcs = ["simulate_plant_to_rest.cc"],
    hdrs = ["simulate_plant_to_rest.h"],
    deps = [
        "//common",
        "//lcm",
        "//manipulation/util:simple_tree_visualizer",
        "//manipulation/util:world_sim_tree_builder",
        "//multibody/rigid_body_plant",
        "//systems/analysis:simulator",
        "//systems/framework:framework",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
    ],
 )


drake_cc_binary(
    name = "random_clutter_demo",
    srcs = ["random_clutter_demo.cc"],
    data = [
        "//examples/kuka_iiwa_arm:prod_models",
    ],
    deps = [
        ":random_clutter_generator",
        ":simulate_plant_to_rest",
        "//common",
        "//common:text_logging_gflags",
        "@gflags",
    ],
)

add_lint_tests()

# === test/ ===

drake_cc_googletest(
    name = "random_clutter_to_rest_test",
    data = [
        "//examples/kuka_iiwa_arm:prod_models",
    ],
    deps = [
        ":random_clutter_generator",
        ":simulate_plant_to_rest",
        "//common",
        "//common/test_utilities:eigen_matrix_compare",
        "//common:text_logging_gflags",
        "@gflags",
    ],
)
