# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "state_machine_utils",
    hdrs = ["state_machine_utils.h"],
    deps = [
        "//drake/common",
        "//drake/systems/rendering:pose_bundle",
    ],
)

drake_cc_library(
    name = "manipulation_state",
    hdrs = ["manipulation_state.h"],
    deps = [
        ":state_machine_utils",
        "//drake/common/trajectories:piecewise_polynomial_trajectory",
    ],
)

drake_cc_library(
    name = "state_machine",
    srcs = ["state_machine.cc"],
    hdrs = ["state_machine.h"],
    deps = [
        ":manipulation_state",
        ":state_machine_utils",
        "//drake/common",
        "//drake/common/trajectories:piecewise_polynomial_trajectory",
    ],
)

drake_cc_library(
    name = "state_machine_system",
    srcs = ["state_machine_system.cc"],
    hdrs = ["state_machine_system.h"],
    deps = [
        "manipulation_state",
        ":state_machine",
        "//drake/common/trajectories:piecewise_polynomial_trajectory",
        "//drake/systems/framework:leaf_system",
    ],
)
