# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "//tools:drake.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")
load(":pick_and_place_test.bzl", "pick_and_place_test")

drake_cc_library(
    name = "pick_and_place_states",
    srcs = ["pick_and_place_states.cc"],
    hdrs = ["pick_and_place_states.h"],
    deps = [
        "//drake/manipulation/planner:constraint_relaxing_ik",
        "//drake/manipulation/state_machine:manipulation_state",
        "//drake/manipulation/state_machine:state_machine_utils",
    ],
)

drake_cc_library(
    name = "pick_and_place_state_machine",
    srcs = ["pick_and_place_state_machine.cc"],
    hdrs = ["pick_and_place_state_machine.h"],
    deps = [
        "//drake/manipulation/state_machine",
        "//drake/manipulation/state_machine:state_machine_utils",
    ],
)
